fix: add DOMAIN_SETTINGS:DELETE permission to DOMAIN_PRIMARY_OWNER
AM-2749